# reposystem

./: .conflow.yaml  .dockerignore  .gitignore  .gitmodules  .hypatia-ignore  0-AI-MANIFEST.a2ml  AGENTIC.scm  AI.a2ml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.dev  ECOSYSTEM-EVIDENCE.adoc  ECOSYSTEM-MAP.adoc  ECOSYSTEM-STATUS.adoc  ECOSYSTEM.scm  ESTATE-ORGANIZATION.adoc  EXPLAINME.adoc  GRAPH-STRUCTURE.md  Justfile  LICENSE.txt  META.scm  Mustfile  NEUROSYM.scm  PLAYBOOK.scm  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  VERSION-ROADMAP.adoc  cleanup-banned-runtimes.sh  config.yaml  container.just  (+14 more)
contractiles/cli/: Cargo.toml
contractiles/runners/must/: 0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  Containerfile  INSTALL.adoc  Justfile  README.adoc  README.md  ROADMAP.adoc  SPARK-CLI-PARSER-COMPLETE.md  SPARK-CONVERSION-COMPLETE.md  SPARK-CONVERSION-SESSION-2026-02-05.md  SPARK-MUSTACHE-ENGINE-COMPLETE.md  SPARK-REQUIREMENT-CHECKER-COMPLETE.md  SPARK-STATUS.md  SPARK-TASK-RUNNER-COMPLETE.md  justfile  must.gpr  mustfile.ncl  mustfile.toml
forge-ops/: Cargo.toml  deno.json  gossamer.conf.json  rescript.json
forge-ops/src/: main.rs
forge-ops/src/commands/: ForgeOpsCmd.res
forge-ops/src/components/: ForgeOps.res  ForgeOpsDiffViewer.res  ForgeOpsMirrorPanel.res  ForgeOpsProtectionEditor.res  ForgeOpsRepoList.res  ForgeOpsSettingsGrid.res
forge-ops/src/core/: ForgeOpsCatalog.res  ForgeOpsEngine.res  ForgeOpsPolicy.res
forge-ops/src/model/: ForgeOpsModel.res
forge-ops/src/modules/: ForgeOpsModule.res  RuntimeBridge.res
fuzz/: Cargo.toml  README.adoc
fuzz/corpus/fuzz_forge_url/: github.txt  sourcehut.txt  unicode.txt
fuzz/corpus/fuzz_graph_json/: malformed.json  minimal.json  single_repo.json
fuzz/corpus/fuzz_scanner_urls/: bitbucket.txt  codeberg.txt  github_ssh.txt  gitlab_ssh.txt  path_only.txt
fuzz/fuzz_targets/: fuzz_forge_url.rs  fuzz_graph_json.rs  fuzz_main.rs  fuzz_scanner_urls.rs
git-morph/: Cargo.toml  DESIGN.md  README.adoc
git-morph/.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
git-morph/src/: deflate.rs  detect.rs  diff.rs  history.rs  inflate.rs  main.rs  manifest.rs  template.rs
git-seo/: Cargo.toml
git-seo/src/: main.rs
gui/: AI.a2ml  Cargo.toml  README.adoc  SECURITY.md  deno.json  gossamer.conf.json  index.html  rescript.json
gui/.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
gui/.machines_readable/6scm/: ECOSYSTEM.scm  META.scm  STATE.scm
gui/lib/rescript-d3/: package.json  rescript.json
gui/lib/rescript-tea/: package.json  rescript.json
gui/lib/rescript-webapi/: package.json  rescript.json
gui/src/: App.res  App.res.js  Graph.res  Graph.res.js  Model.res  Model.res.js  Msg.res  RuntimeBridge.res  RuntimeBridge.res.js  Update.res  Update.res.js  View.res  View.res.js  main.js  main.rs  styles.css
gui/src-tauri/: Cargo.toml  build.rs  gossamer.conf.json  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  main.rs
gui/src/bindings/: Backend.res  Backend.res.js  D3.res  D3.res.js  D3_Drag.res  D3_Force.res  D3_Force.res.js  D3_Selection.res  D3_Zoom.res  Fetch.res  Fetch.res.js  Tauri.res  Tauri.res.js
gui/src/modules/: PanllBridge.res  PanllBridge.res.js  ReposystemModule.res  ReposystemModule.res.js
recon-silly-ation/validator/: DocumentValidator.hs  Main.hs  validator-bridge.cabal
recon-silly-ation/wasm-modules/: Cargo.toml
recon-silly-ation/wasm-modules/src/: lib.rs  security.rs
rpa-elysium/: .gitattributes  .gitignore  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  CONTRIBUTING.md  Cargo.toml  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  deno.json  flake.nix  guix.scm  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  rescript.json  setup.sh  stapeln.toml
rpa-elysium/.claude/: CLAUDE.md
rpa-elysium/.github/workflows/: casket-pages.yml  cflite_batch.yml  cflite_pr.yml  codeql.yml  dogfood-gate.yml  guix-nix-policy.yml  hypatia-scan.yml  mirror.yml  rsr-antipattern.yml  rust-ci.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml
rpa-elysium/.hypatia/: activity.jsonl  last-visit.json  rules.json
rpa-elysium/.machine_readable/: ADJUST.contractile  CLADE.a2ml  INTENT.contractile  MUST.contractile  TRUST.contractile
rpa-elysium/.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
rpa-elysium/.machine_readable/anchors/: ANCHOR.a2ml
rpa-elysium/.machine_readable/contractiles/: Adjustfile.a2ml  Intentfile.a2ml  Mustfile.a2ml  Trustfile.a2ml
rpa-elysium/.well-known/: security.txt
rpa-elysium/benches/: rpa_benchmarks.rs
rpa-elysium/crates/rpa-config/: Cargo.toml
rpa-elysium/crates/rpa-core/: Cargo.toml
rpa-elysium/crates/rpa-events/: Cargo.toml
rpa-elysium/crates/rpa-fs-workflow/: Cargo.toml  (+1 more)
rpa-elysium/docs/: CITATIONS.adoc
rpa-elysium/examples/: workflow.ncl
rpa-elysium/fuzz/: Cargo.toml
rpa-elysium/hooks/: validate-codeql.sh  validate-sha-pins.sh
rpa-elysium/services/: gleam.toml
stateful-artefacts/gnosis/: .gitignore  README.md  gnosis.cabal  install.sh
tools/git-submodule-flush/: Cargo.toml  MY-LANG-GRADUATION.adoc
tools/gitmerge-paralleliser/: Cargo.toml
tools/merge-resolver/: Cargo.toml
total-upgrade/: .gitignore  CROSS_CHECK_MAP.md  Cargo.toml  Containerfile  EXPLAINME.adoc  Justfile  LICENSE.txt  QUICKSTART-DEV.adoc  QUICKSTART-USER.adoc  README.adoc  RELEASE_CHECKLIST.md  ROADMAP.adoc  STAGE0_ASSESSMENT.md  STUB_MAP.md  manifest.scm
total-upgrade/launcher/: total-upgrade-launcher.sh
total-upgrade/src/: main.rs  tests.rs
tui/: Cargo.toml  README.adoc  reposystem_tui.gpr
tui/legacy-ada/: README.adoc  reposystem_tui-main.adb  reposystem_tui.adb  reposystem_tui.ads  reposystem_tui.gpr
tui/src/: lib.rs  main.rs  reposystem_tui-main.adb  reposystem_tui.adb  reposystem_tui.ads
(+1498 files in other folders)
