# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "reposystem-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dependencies.reposystem]
path = ".."

[[bin]]
name = "fuzz_graph_json"
path = "fuzz_targets/fuzz_graph_json.rs"
test = false
doc = false

[[bin]]
name = "fuzz_forge_url"
path = "fuzz_targets/fuzz_forge_url.rs"
test = false
doc = false

[[bin]]
name = "fuzz_scanner_urls"
path = "fuzz_targets/fuzz_scanner_urls.rs"
test = false
doc = false
