# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "reposystem-gui"
version = "0.1.0"
description = "Railway yard GUI for repository ecosystem management"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/reposystem"
edition = "2021"
rust-version = "1.70"

[dependencies]
gossamer-rs = { path = "../../../gossamer/bindings/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# Local dependency on reposystem library (root crate)
reposystem = { path = "../.." }
