# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>

[workspace]
resolver = "2"
members = [
    "crates/rpa-core",
    "crates/rpa-config",
    "crates/rpa-events",
    "crates/rpa-plugin",
    "crates/rpa-resources",
    "crates/rpa-scheduler",
    "crates/rpa-state",
    "crates/rpa-fs-workflow",
]

[package]
name = "rpa-elysium"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "RPA Elysium - Comprehensive test suite for filesystem automation"

[[bench]]
name = "rpa_benchmarks"
harness = false

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"  # MPL-2.0 fallback available for ecosystem compatibility
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/rpa-elysium"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filesystem watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Configuration (Nickel integration via JSON bridge)
nickel-lang-core = "0.8"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# File operations
walkdir = "2.4"
glob = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }

# Plugin system (WASM sandbox)
wasmtime = "36.0.7"
wit-bindgen = "0.36"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
tempfile = "3.10"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
