# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "reposystem-tui"
version = "0.1.0"
description = "Terminal user interface for reposystem — railway yard for your repository ecosystem"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/reposystem"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "reposystem-tui"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.28"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Local dependency on reposystem library (root crate)
reposystem = { path = ".." }

[dev-dependencies]
# For property-based testing of SPARK-equivalent invariants
proptest = "1"
