[package]
name = "recon-wasm"
version = "0.2.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.10"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
thiserror = "2.0"
js-sys = "0.3"

# formatrix-docs integration (local path for development)
# formatrix-core = { path = "../../formatrix-docs/crates/formatrix-core" }

# Format parsing libraries (same as formatrix-docs)
comrak = "0.49"          # Markdown (GFM)
jotdown = "0.7"          # Djot
orgize = "0.9"           # Org-mode

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
