# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell

[package]
name = "git-submodule-flush"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
description = "Recursively commit and push dirty submodule trees bottom-up, with dry-run, depth limits, and confidence guards"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/reposystem"
keywords = ["git", "submodule", "recursive", "commit", "flush"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-submodule-flush"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
