# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>

[package]
name = "rpa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types and traits for RPA Elysium automation toolkit"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = "1.4"
criterion = { workspace = true }
