# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>

[package]
name = "rpa-events"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Async event bus for RPA Elysium — pub/sub dispatch with lifecycle hooks"

[dependencies]
rpa-core = { path = "../rpa-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
