# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>

[package]
name = "rpa-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Plugin API and WASM sandbox for RPA Elysium"

[dependencies]
rpa-core = { path = "../rpa-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
wasmtime = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
criterion = { workspace = true }
