# SPDX-License-Identifier: PMPL-1.0-or-later
# contractile-core — A2ML parser, K9 bridge, Just emitter
# Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath)

[package]
name = "contractile-core"
description = "Core library for parsing A2ML contractile files, bridging K9 Nickel components, and emitting Just recipes"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
