# SPDX-License-Identifier: PMPL-1.0-or-later
# contractile — unified CLI for Must/Trust/Dust/Intend/K9 contractile runners
# Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath)

[package]
name = "contractile"
description = "Unified CLI for executing contractile files: must check, trust verify, dust rollback, intend list, k9 eval"
version.workspace = true
authors.workspace = true
# PMPL-1.0-or-later preferred; MPL-2.0 required for crates.io (no PMPL SPDX ID yet)
license = "MPL-2.0"
edition.workspace = true
rust-version.workspace = true
repository = "https://github.com/hyperpolymath/contractiles"
homepage = "https://github.com/hyperpolymath/contractiles"
readme = "../../../../contractiles/docs/QUICKSTART.adoc"
keywords = ["contractile", "must", "trust", "dust", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
contractile-core.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
colored.workspace = true
toml.workspace = true
clap_complete.workspace = true
